--- a/20221030_Export_Forecasting_with_R.Rmd
+++ b/20221030_Export_Forecasting_with_R.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "20221030_Export_Forecast_with_R"
+title: "Soybean Export Forecast with R"
 author: "Felipe Tufaile, Vinicius de Camargo, Helena Funari, Rodrigo Zamengo"
 date: "`r Sys.Date()`"
 output: html_document
 ---
 
-### Soy Bean Export Volume Forecast with R
+### Summary
 
 This document aims to study the time series of soybean exports with the aid of the R language and packages available for time series analysis for the mentioned programming language. The study will focus only on the Midwest region of Brazil in order to diminish the impact of different seasonal patterns in the soybean production cycle in different regions of Brazil. The study will, therefore, cover the analysis of its components (trend, seasonality and noise), forecasting export volume for future months using time series models like **sarima** and **prophet**, the implementation of techniques for adjusting the time series as well as any other observation on the characteristics of the time series that might be relevant.
 
@@ -98,7 +98,7 @@ midwest_soybean <- export %>%
 
 The following chart shows the mass (millions of ton) of soy bean exported from January of 2000 to December of 2021. In order to account only for complete years, the year of 2022 was left out of this plot, but will be used later on this document.
 Looking at the plot, it can be noticed that the time series seems to have a well defined seasonal pattern, but with increasing variance along the years. That is, the series denotes a heteroskedastic behavior. Given this fact, a Box Cox transformation could help make the data more 'normally’ distributed and thus help
-stabilize its variance. With this transformation, forecasting can be substantially simpler. For that reason it will also be studied the BoxCox-trasnformed time series.
+stabilize its variance. With this transformation, forecasting can be substantially simpler. For that reason it will also be studied the Box-Cox transformed time series.
  
 
 ```{r plotting_series_01, out.width="100%"}
@@ -126,7 +126,14 @@ plot
 
 ### Applying a boxcox transformation on the time-series
 
+A Box-Cox transformation is a power transform function that is used to stabilize variance and make the data more "normally" distributed, which may improve the performance in forecasting for some time-series models. The one-parameter Box-Cox transformation is defined as:   
 
+\begin{align*}
+y_{i}^{(\lambda)} = \frac{y_{i}^{(\lambda)}-1}{\lambda} \text{ if } \lambda \ne 0 \\
+y_{i}^{(\lambda)} = \ln(y_{i}) \text{ if } \lambda = 0
+\end{align*}
+
+Applying the transformation on the original time-series yields:
 
 ```{r boxcox, out.width="100%"}
 ## Calculating boxcox transformation on vl_mm_ton
@@ -142,21 +149,22 @@ plot <- ggplot() +
             xdata="ref_date_fmd", 
             ydata="vl_mm_ton_boxcox", 
             name="Soy Bean Export", 
-            color="#009491", 
+            color="#C4161C", 
             text_position="Above", 
             labels="labels") +
-  scale_color_manual(name="", breaks=c('Soy Bean Export'), values=c('#009491')) +
+  scale_color_manual(name="", breaks=c('Soy Bean Export'), values=c('#C4161C')) +
   time_series_xlabels() +
   scale_y_continuous(limits=c(-3, 3), breaks=seq(-3, 3, 1), minor_breaks=seq(-3, 3, 0.5)) +
   labs(x = "", 
        y = "Soy Bean Export (MM Ton)",
-       title=paste('Soy Bean Export in Midwest of Brazil | Boxcox with lambda=', round(attributes(boxcox_transform)$lambda,2)),
+       title=paste('Soy Bean Export in Midwest of Brazil | Box-Cox with lambda=', round(attributes(boxcox_transform)$lambda,2)),
        subtitle="") +
   time_series_theme()
 
 plot
 ```
 
+It can be seem that the transformation helped to reduce the change in variance over time, although it seems that there is still a difference in the variance of recent years and older years. In order to validate if the transformation in fact helped to give a more normal-like distribution, the following chart shows a qq plot of the original and Box-Cox transformed series. It is evident that the transformed series is more adherent to the straight line in the chart, meaning the transformation has improved normality.  
 
 ```{r qqplot, out.width="100%"}
 df_hist = rbind(tibble(vl_mm_ton = as.double(midwest_soybean$vl_mm_ton), type = "Original"), 
@@ -165,12 +173,31 @@ ggplot(df_hist, aes(sample = vl_mm_ton)) +
 geom_qq() +
 geom_qq_line() +
 facet_grid(type ~ ., scales = "free_y") +
-ggtitle("QQ plot: Original and transformed data", "BoxCox transform improved normality")
+ggtitle("QQ plot: Original versus transformed time series", "BoxCox transform improved normality")
 
 ```
 
 
 ### Plotting ACF and PACF plots on the original time-series
+
+Analyzing the time series in the above figures it seems that both time series, original and transformed, have a stochastic trend since there seems to be some randomness building up over time. In order to confirm that observation it will be applied a **ADF** (Augmented Dicker-Fuller) test to check if there is unit-roots present in the series.
+
+**ADF test on original time series**
+```{r adf_test_original}
+tseries::adf.test(midwest_soybean$vl_mm_ton,
+                  alternative = c("stationary", "explosive"), 
+                  k = trunc((length(midwest_soybean$vl_mm_ton)-1)^(1/3)))
+```
+
+**ADF test on transformed time series**
+```{r adf_test_transformed}
+tseries::adf.test(midwest_soybean_boxcox$vl_mm_ton_boxcox,
+                  alternative = c("stationary", "explosive"), 
+                  k = trunc((length(midwest_soybean_boxcox$vl_mm_ton_boxcox)-1)^(1/3)))
+```
+
+
+Auto-Correlation and Partial Auto-Correlation functions helps  
 
 ```{r creating_time_series, out.width="100%"}
 ## Building time series object on exporting data
@@ -187,11 +214,6 @@ midwest_soybean_tsibble %>%
   gg_tsdisplay(vl_mm_ton, plot_type='partial')
 ```
 
-```{r}
-tseries::adf.test(midwest_soybean_boxcox$vl_mm_ton_boxcox,
-                  alternative = c("stationary", "explosive"), 
-                  k = trunc((length(midwest_soybean_boxcox$vl_mm_ton_boxcox)-1)^(1/3)))
-```
 
 
 ### Plotting ACF and PACF plots on the time-series difference one time
