--- a/20221030_Export_Forecasting_with_R.Rmd
+++ b/20221030_Export_Forecasting_with_R.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE, include = TRUE, message = FA
 ```{r libraries}
 
 ## Set working directory
-setwd("~/Insper/Commodity_Export_Forecast")
+#setwd("~/Insper/Commodity_Export_Forecast")
 
 library(dplyr)
 library(tidyverse)
@@ -83,7 +83,7 @@ As mentioned in the beggining of this study, the dataset will be filtered in ord
 
 ```{r loading_dataset}
 # Reading export dataset
-export <- read_csv("export_database.csv")
+export <- read_csv("https://raw.githubusercontent.com/FelipeTufaile/Commodity_Export_Forecast/main/export_database.csv")
 
 # Selecting soy bean production in midwest
 midwest_soybean <- export %>% 
@@ -232,7 +232,7 @@ Since the p-value obtained with the **KPSS** test is low for both series (less t
 ## Building a time series object on the exporting data with one differencing on exported amount
 dt1_midwest_soybean_tsibble <- midwest_soybean %>%
     dplyr::select(ref_date_fmd, vl_mm_ton) %>%
-    dplyr::mutate(vl_mm_ton_dt1 = difference(vl_mm_ton)) %>%
+    dplyr::mutate(vl_mm_ton_dt1 = difference(vl_mm_ton,12)) %>%
     dplyr::select(-vl_mm_ton) %>%
     dplyr::mutate(ref_date_fmd = tsibble::yearmonth(ref_date_fmd)) %>%
     tsibble::as_tsibble(index=ref_date_fmd)
@@ -240,7 +240,7 @@ dt1_midwest_soybean_tsibble <- midwest_soybean %>%
 ## Building a time series object on the transformed exporting data with one differencing on exported amount
 dt1_midwest_soybean_boxcox_tsibble <- midwest_soybean_boxcox %>%
     dplyr::select(ref_date_fmd, vl_mm_ton_boxcox) %>%
-    dplyr::mutate(vl_mm_ton_boxcox_dt1 = difference(vl_mm_ton_boxcox)) %>%
+    dplyr::mutate(vl_mm_ton_boxcox_dt1 = difference(vl_mm_ton_boxcox,12)) %>%
     dplyr::select(-vl_mm_ton_boxcox) %>%
     dplyr::mutate(ref_date_fmd = tsibble::yearmonth(ref_date_fmd)) %>%
     tsibble::as_tsibble(index=ref_date_fmd)
@@ -328,6 +328,46 @@ annotate_figure(plot, top=text_grob("Soy Bean Export in Midwest of Brazil",
                                     vjust=0))
 
 ```
+```{r}
+y <- midwest_soybean_tsibble$vl_mm_ton
+
+```
+
+
+```{r}
+library(forecast)
+fit1 = Arima(y,order=c(2,0,0),seasonal=list(order=c(2,1,2),period=12),method="ML")
+fit2 = Arima(y,order=c(1,0,0),seasonal=list(order=c(1,1,0),period=12),method="ML")
+fit3 = Arima(y,order=c(0,0,2),seasonal=list(order=c(1,1,0),period=12),method="ML")
+fit_auto <- auto.arima(midwest_soybean$vl_mm_ton)
+fit_auto_bc <- auto.arima(midwest_soybean$vl_mm_ton, lambda = 0.14)
+
+aic  = c(fit1$aic,fit2$aic,fit3$aic,fit_auto$aic,fit_auto_bc$aic)
+aicc = c(fit1$aicc,fit2$aicc,fit3$aicc,fit_auto$aicc,fit_auto_bc$aicc)
+bic  = c(fit1$bic,fit2$bic,fit3$bic,fit_auto$bic,fit_auto_bc$bic)
+cbind(aic,aicc,bic)
+
+
+
+
+```
+```{r}
+res <- fit1$residuals
+par(mfrow=c(1,1))
+Acf(res,main="",xlab="")
+Box.test(res, lag=24, fitdf=1, type="Ljung")
+```
+
+
+```{r}
+plot(forecast(fit1,h=12))
+```
+#Backtest
+
+```{r}
+
+```
+
 
 ### Bibliography
 
